# fluxum

./: .codespellrc  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rustc-ice-2026-07-20T09_53_49-97684.txt  rustfmt.toml
crates/fluxum-bench/: Cargo.toml  README.md
crates/fluxum-bench/spacetimedb-module/: Cargo.toml
crates/fluxum-bench/spacetimedb-module/src/: lib.rs
crates/fluxum-bench/src/: baseline_side.rs  fluxum_side.rs  lib.rs  load.rs  main.rs  measure.rs  report.rs  spacetimedb_side.rs  workload.rs
crates/fluxum-bench/src/baseline/: db.rs  mod.rs  server.rs
crates/fluxum-bench/src/spacetimedb_bindings/: add_task_reducer.rs  chat_message_type.rs  complete_task_reducer.rs  mod.rs  online_user_table.rs  online_user_type.rs  send_chat_budget_type.rs  send_chat_reducer.rs  task_table.rs  task_type.rs
crates/fluxum-bench/tests/: load_smoke.rs  parity_smoke.rs  spacetimedb_smoke.rs
crates/fluxum-cli/: Cargo.toml  README.md
crates/fluxum-cli/src/: backup.rs  dev.rs  init.rs  lib.rs  logs.rs  main.rs  migrate.rs  seed.rs
crates/fluxum-cli/src/generate/: mod.rs  rust.rs  typescript.rs
crates/fluxum-cli/tests/: backup_cli.rs  dev_smoke.rs  rust_generated_golden.rs  seed_e2e.rs  typescript_compiles.rs  typescript_generated_golden.rs
crates/fluxum-core/: Cargo.toml
crates/fluxum-core/benches/: compression.rs  memstore.rs  simd_kernels.rs  spatial.rs  table_clone.rs  txn_commit.rs
crates/fluxum-core/benches/support/: corpus.rs
crates/fluxum-core/src/: crdt.rs  crypto.rs  error.rs  lib.rs  metrics.rs  net.rs  secevent.rs  secret.rs  shard.rs  types.rs
crates/fluxum-core/src/auth/: jwt.rs  mod.rs  none.rs  token.rs
crates/fluxum-core/src/backup/: mod.rs  remote.rs  seekable.rs  store.rs
crates/fluxum-core/src/checkpoint/: compact.rs  manifest.rs  mod.rs  recover.rs  repo.rs  tests.rs  worker.rs
crates/fluxum-core/src/commitlog/: audit.rs  blob.rs  format.rs  mod.rs  record.rs  replay.rs  segment.rs  tests.rs  writer.rs
crates/fluxum-core/src/config/: bytes.rs  mod.rs
crates/fluxum-core/src/hw/: cgroup.rs  mod.rs
crates/fluxum-core/src/index/: btree.rs  fulltext.rs  mod.rs  quadtree.rs  rtree.rs
crates/fluxum-core/src/migration/: catalog.rs  context.rs  diff.rs  mod.rs  runner.rs
crates/fluxum-core/src/plugin/: mod.rs  sidecar.rs
crates/fluxum-core/src/reducer/: args.rs  engine.rs  idempotency.rs  mod.rs  ratelimit.rs  stdlib.rs  view.rs
crates/fluxum-core/src/scheduler/: mod.rs
crates/fluxum-core/src/schema/: mod.rs  registry.rs
crates/fluxum-core/src/simd/: crc32c.rs  hash64.rs  mod.rs  predicate.rs
crates/fluxum-core/src/sql/: lexer.rs  mod.rs  parse.rs
crates/fluxum-core/src/store/: committed.rs  memstore.rs  mod.rs  row.rs  tx.rs  unique.rs
crates/fluxum-core/src/subscription/: matview.rs  mod.rs  proptest.rs  sendbuffer.rs
crates/fluxum-core/tests/: backup_pitr.rs  backup_remote.rs  blob_store.rs  config_example.rs  crash_checkpoint_boundaries.rs  crash_corruption.rs  crash_kill9.rs  crdt_text.rs  encryption_at_rest.rs  ephemeral_tables.rs  ephemeral_validation.rs  field_crypto.rs  fulltext_index.rs  fulltext_match.rs  fulltext_rerank_fusion.rs  index_scans.rs  keyset_pagination.rs  page_compression.rs  pager_10x.rs  plugin_framework.rs  plugin_sidecar.rs  query_planner.rs  query_planner_counters.rs  query_reducer_bounds.rs  rate_limit.rs  recovery_bench.rs  reducer_context.rs  reducer_engine.rs  reducer_idempotency.rs  reducer_panic_soak.rs  reducer_stdlib.rs  resumable_subscriptions.rs  row_ttl.rs  schedule_deferred.rs  schema_migration.rs  schema_version_duplicate.rs  schema_version_registry.rs  shard_routing.rs  simd_parity.rs  spatial_quadtree.rs  (+11 more)
crates/fluxum-demo/: Cargo.toml
crates/fluxum-demo/src/: lib.rs
crates/fluxum-dst/: Cargo.toml
crates/fluxum-dst/src/: lib.rs  model.rs  rng.rs  sim.rs
crates/fluxum-dst/tests/: dst_storage.rs
crates/fluxum-macros/: Cargo.toml
crates/fluxum-macros/src/: flux_type.rs  lib.rs  migration.rs  reducer.rs  table.rs  trigger.rs
crates/fluxum-macros/tests/: column_transforms.rs  computed_columns.rs  constraints_triggers.rs  crdt_column.rs  field_crypto_build.rs  field_security.rs  materialized_views.rs  migration_registry.rs  reducer_lifecycle.rs  registry_duplicate.rs  relational_rls.rs  rich_types.rs  schema_registry.rs  tick_schedule.rs  trybuild.rs  typed_edges.rs  typed_txhandle.rs
crates/fluxum-protocol/: Cargo.toml
crates/fluxum-protocol/src/: codes.rs  fluxbin.rs  frame.rs  lib.rs  messages.rs  plugin_rpc.rs  rowlist.rs  tagged.rs
crates/fluxum-protocol/tests/: additive_fields.rs  envelope_edge.rs  fluxbin_golden.rs  frame_edge.rs  msgpack_golden.rs  roundtrip_prop.rs  size_advantage.rs  thunder_parity.rs
crates/fluxum-server/: Cargo.toml
crates/fluxum-server/benches/: loopback_rtt.rs
crates/fluxum-server/src/: admin.rs  boot.rs  clientip.rs  connguard.rs  console.html  console.rs  http.rs  lib.rs  logging.rs  main.rs  namespace.rs  quota.rs  session.rs  session_sec.rs  shard.rs  sock.rs  statics.rs  tcp.rs  tls.rs
crates/fluxum-server/tests/: admin_api.rs  admin_authz.rs  audit_trail.rs  backup_e2e.rs  blob_endpoints.rs  boot_probe.rs  config_hot_reload.rs  connection_abuse.rs  console.rs  dashboard_metrics.rs  demo_schema_golden.rs  entity_handoff.rs  fanout.rs  graceful_drain.rs  http_loopback.rs  ip_bans.rs  logs_stream.rs  migration_plan.rs  namespaces.rs  observability.rs  overload_resilience.rs  proxy_client_ip.rs  schema_golden.rs  session_hardening.rs  session_router.rs  shard_coord.rs  tcp_loopback.rs  tenant_quotas.rs  transport_tls.rs
crates/fluxum-testkit/: Cargo.toml
crates/fluxum-testkit/src/: crash.rs  lib.rs
crates/fluxum-testkit/tests/: example.rs
crates/fluxum-testmod/: Cargo.toml
crates/fluxum-testmod/src/: lib.rs
demo/: README.md  (+3 more)
sdks/rust/: Cargo.toml
sdks/rust/src/: cache.rs  client.rs  http.rs  idempotency.rs  lib.rs  optimistic.rs  persist.rs  resume.rs
sdks/rust/tests/: client_e2e.rs  conformance.rs  generated_compiles.rs  protocol_sync.rs
(+747 files in other folders)
