[workspace]
resolver = "2"
members = ["crates/*", "sdks/rust"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/hivellm/fluxum"

# Centralized dependency versions — crates inherit with `dep.workspace = true`.
# Kept minimal for T0.1; external deps land here as phases need them.
[workspace.dependencies]
arc-swap = "1"
crc = "3"
crc32c = "0.6"
criterion = "0.5"
fluxum-core = { path = "crates/fluxum-core", version = "0.1.0" }
fluxum-macros = { path = "crates/fluxum-macros", version = "0.1.0" }
fluxum-protocol = { path = "crates/fluxum-protocol", version = "0.1.0" }
fluxum-testmod = { path = "crates/fluxum-testmod", version = "0.1.0" }
hmac = "0.12"
inventory = "0.3"
jsonwebtoken = "9"
lz4 = "1"
proc-macro2 = "1"
proptest = "1"
quote = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
syn = { version = "2", features = ["full"] }
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", default-features = false }
tracing = "0.1"
trybuild = "1"
unicode-normalization = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
zstd = "0.13"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
undocumented_unsafe_blocks = "deny"

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
strip = true
