[workspace]
resolver = "2"
members = ["crates/*", "sdks/rust"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/hivellm/fluxum"

# Centralized dependency versions — crates inherit with `dep.workspace = true`.
# Kept minimal for T0.1; external deps land here as phases need them.
[workspace.dependencies]
arc-swap = "1"
crc = "3"
crc32c = "0.6"
criterion = "0.5"
# Path-only, deliberately: a `version` here would make a consumer resolve these
# from crates.io, which is what forces an internal crate to be published
# alongside whatever depends on it. They are `publish = false` and stay inside
# the workspace.
fluxum-core = { path = "crates/fluxum-core" }
fluxum-demo = { path = "crates/fluxum-demo" }
fluxum-macros = { path = "crates/fluxum-macros" }
fluxum-protocol = { path = "crates/fluxum-protocol" }
fluxum-testmod = { path = "crates/fluxum-testmod" }
hmac = "0.12"
inventory = "0.3"
jsonwebtoken = "9"
lz4 = "1"
proc-macro2 = "1"
proptest = "1"
quote = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
# Already in the tree via tokio; direct use is the per-socket keepalive knob
# (SPEC-026 SEC-042).
socket2 = "0.6"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
hkdf = "0.12"
syn = { version = "2", features = ["full"] }
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
tempfile = "3"
thiserror = "2"
# HiveLLM shared binary RPC (wire v1, frozen). Registry name `thunder-rpc`, lib
# name `thunder` — call sites say `use thunder::`. `fluxum-protocol` delegates
# the framing to `thunder::wire` (SPEC-006 RPC-001); default features off
# because Fluxum needs only the sans-IO wire codec, not the client or server.
thunder-rpc = { version = "0.2.0", default-features = false }
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
trybuild = "1"
unicode-normalization = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
zstd = "0.13"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
undocumented_unsafe_blocks = "deny"

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
strip = true
