[package]
name = "fluxum-bench"
description = "PostgreSQL/SQLite parity harness: same application on Fluxum vs app-server+DB, comparative report generator (SPEC-013 §15, NFR-11)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Internal to the workspace: never goes to crates.io. Only `fluxum-sdk` is
# published (SPEC-011 SDK-071), so no consumer ever resolves this from the
# registry and it cannot drag a second crate into a release.
publish = false

[dependencies]
axum.workspace = true
fluxum-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
# The competitive-baseline side (TST-097) drives a pinned SpacetimeDB
# server through its published client SDK; `spacetimedb_bindings/` is the
# `spacetime generate` output for the demo module in `spacetimedb-module/`.
spacetimedb-sdk.workspace = true
sqlx.workspace = true
sysinfo.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
tungstenite.workspace = true
ureq.workspace = true

[lints]
workspace = true
