[package]
name = "fluxum-cli"
description = "fluxum binary: generate, schema export, backup, admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Internal to the workspace: never goes to crates.io. Only `fluxum-sdk` is
# published (SPEC-011 SDK-071), so no consumer ever resolves this from the
# registry and it cannot drag a second crate into a release.
publish = false

[[bin]]
name = "fluxum"
path = "src/main.rs"

[dependencies]
# The T7.3 backup engine (create/verify/restore/PITR) and the config loader
# the data-layout resolution shares with the server.
fluxum-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
