[package]
name = "fluxum-core"
description = "Fluxum core: storage, transactions, indexes, runtime, subscriptions, sharding, migration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
crc32c.workspace = true
fluxum-protocol.workspace = true
hmac.workspace = true
inventory.workspace = true
jsonwebtoken.workspace = true
lz4.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
zstd.workspace = true

[dev-dependencies]
crc.workspace = true
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
xxhash-rust.workspace = true

[lints]
workspace = true

[[bench]]
name = "memstore"
harness = false

[[bench]]
name = "spatial"
harness = false

[[bench]]
name = "simd_kernels"
harness = false

[[bench]]
name = "compression"
harness = false
