[package]
name = "fluxum-core"
description = "Fluxum core: storage, transactions, indexes, runtime, subscriptions, sharding, migration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Internal to the workspace: never goes to crates.io. Only `fluxum-sdk` is
# published (SPEC-011 SDK-071), so no consumer ever resolves this from the
# registry and it cannot drag a second crate into a release.
publish = false

[dependencies]
arc-swap.workspace = true
crc32c.workspace = true
fluxum-protocol.workspace = true
hmac.workspace = true
imbl.workspace = true
inventory.workspace = true
jsonwebtoken.workspace = true
lz4.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
chacha20poly1305.workspace = true
zeroize.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
crc.workspace = true
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "test-util"] }
# Captures the `security`-target trail in secevent unit tests.
tracing-subscriber.workspace = true
xxhash-rust.workspace = true

[lints]
workspace = true

[[bench]]
name = "memstore"
harness = false

[[bench]]
name = "spatial"
harness = false

[[bench]]
name = "simd_kernels"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "txn_commit"
harness = false

[[bench]]
name = "table_clone"
harness = false
