[package]
name = "fluxum-macros"
description = "Fluxum procedural macros: #[table], #[reducer], #[tick], #[schedule], lifecycle hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
fluxum-core.workspace = true
fluxum-testmod.workspace = true
trybuild.workspace = true

[lints]
workspace = true
