[package]
name = "fluxum-macros"
description = "Fluxum procedural macros: #[table], #[reducer], #[tick], #[schedule], lifecycle hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
fluxum-core.workspace = true
fluxum-protocol.workspace = true
fluxum-testmod.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
trybuild.workspace = true

[lints]
workspace = true
