[package]
name = "fluxum-protocol"
description = "Fluxum pure wire layer: FluxValue, FluxBIN codec, FluxRPC framing and message types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
thunder-rpc.workspace = true

[lints]
workspace = true
