[package]
name = "fluxum-protocol"
description = "Fluxum pure wire layer: FluxValue, FluxBIN codec, FluxRPC framing and message types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Internal to the workspace: never goes to crates.io. Only `fluxum-sdk` is
# published (SPEC-011 SDK-071), so no consumer ever resolves this from the
# registry and it cannot drag a second crate into a release.
publish = false

[dependencies]
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
thunder-rpc.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
