[package]
name = "fluxum-server"
description = "Fluxum server: FluxRPC TCP, Streamable HTTP /rpc + admin, auth providers, metrics, ServerBuilder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fluxum-core.workspace = true
fluxum-protocol.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "signal", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "io-util", "sync", "time"] }

[lints]
workspace = true

[[bench]]
name = "loopback_rtt"
harness = false
