[package]
name = "fluxum-sdk"
description = "Fluxum Rust client SDK: typed tables, reducer calls, and live subscriptions over FluxRPC (SPEC-011 SDK-050)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Deliberately depends on nothing internal: `src/protocol/` is vendored from
# `crates/fluxum-protocol` (see that module's docs) so this crate publishes on
# its own, without releasing an internal server crate to crates.io alongside it.
[dependencies]
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
thunder-rpc.workspace = true

# Test-only: the conformance runner (tests/conformance.rs) reads the shared
# JSON corpus (tests/conformance/ at the repo root). Not a runtime dependency
# — the published client carries none of this.
[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
